// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tagInput > should renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_0_"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="true"
          data-error="false"
          data-readonly="false"
          data-success="false"
        >
          <div
            class="styles__sjgcm24"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly readOnly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="true"
          data-success="false"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_4_"
              readonly=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="true"
          data-readonly="false"
          data-success="false"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_c_"
              type="text"
              value=""
            />
          </div>
          <div
            class="styles__sjgcm25"
          >
            <svg
              class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_danger__vbm0wqb styles_size_small__vbm0wqg styles_undefined_compound_36__vbm0wq1k"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
      >
        This is an error
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_6_"
      >
        Label
      </label>
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_6_"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with labelDescription 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_9_"
        />
        <div>
          label description
        </div>
      </div>
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_9_"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with placeholder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_i_"
              placeholder="Enter a value here"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with some tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
        >
          <div
            class="styles__sjgcm24"
          >
            <span
              class="styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            >
              <span
                class="styles__d6zknph style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
              >
                hello
              </span>
              <button
                aria-label="Close tag"
                class="styles__d6zknpi styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                data-testid="close-tag"
                type="button"
              >
                <svg
                  class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </span>
            <span
              class="styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            >
              <span
                class="styles__d6zknph style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
              >
                world
              </span>
              <button
                aria-label="Close tag"
                class="styles__d6zknpi styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                data-testid="close-tag"
                type="button"
              >
                <svg
                  class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </span>
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_k_"
              name="radio"
              placeholder=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with some tags objects 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
        >
          <div
            class="styles__sjgcm24"
          >
            <span
              class="styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            >
              <span
                class="styles__d6zknph style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
              >
                hello
              </span>
              <button
                aria-label="Close tag"
                class="styles__d6zknpi styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                data-testid="close-tag"
                type="button"
              >
                <svg
                  class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </span>
            <span
              class="styles__d6zknp0 styles_sentiment_neutral__d6zknp5"
            >
              <span
                class="styles__d6zknph style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
              >
                world
              </span>
              <button
                aria-label="Close tag"
                class="styles__d6zknpi styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                data-testid="close-tag"
                type="button"
              >
                <svg
                  class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </span>
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_q_"
              name="radio"
              placeholder=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="true"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_f_"
              type="text"
              value=""
            />
          </div>
          <div
            class="styles__sjgcm25"
          >
            <svg
              class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_success__vbm0wqa styles_size_small__vbm0wqg styles_undefined_compound_35__vbm0wq1j"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M8 2.27273C4.83691 2.27273 2.27273 4.83691 2.27273 8C2.27273 11.1631 4.83691 13.7273 8 13.7273C11.1631 13.7273 13.7273 11.1631 13.7273 8C13.7273 4.83691 11.1631 2.27273 8 2.27273ZM1 8C1 4.13401 4.13401 1 8 1C11.866 1 15 4.13401 15 8C15 11.866 11.866 15 8 15C4.13401 15 1 11.866 1 8ZM10.4911 5.89126C10.7771 6.09554 10.8433 6.49298 10.639 6.77897L7.98753 10.4911C7.8788 10.6433 7.70861 10.74 7.52218 10.7554C7.33576 10.7708 7.15199 10.7035 7.01972 10.5712L5.42881 8.98028C5.1803 8.73177 5.1803 8.32884 5.42881 8.08033C5.67733 7.83181 6.08025 7.83181 6.32877 8.08033L7.38849 9.14006L9.60338 6.03921C9.80766 5.75322 10.2051 5.68698 10.4911 5.89126Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_success__m4c9owe style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_56__m4c9ow2u"
      >
        This is a success
      </span>
    </div>
  </div>
</DocumentFragment>
`;
